fix loadedentities, simplify iregistry stuff by moving things into a common base class so i can define vars in there